--- a/package.json
+++ b/package.json
@@ -15,12 +15,14 @@
     "@emotion/react": "^11.11.3",
     "@emotion/styled": "^11.11.0",
     "@types/react-syntax-highlighter": "^15.5.11",
+    "axios": "^1.6.8",
     "framer-motion": "^11.0.5",
     "next": "14.1.0",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.0.1",
-    "react-syntax-highlighter": "^15.5.0"
+    "react-syntax-highlighter": "^15.5.0",
+    "universal-cookie": "^7.1.0"
   },
   "devDependencies": {
     "@types/node": "^20",
