--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@types/react-syntax-highlighter": "^15.5.11",
     "axios": "^1.6.8",
     "framer-motion": "^11.0.5",
+    "jsonwebtoken": "^9.0.2",
     "next": "14.1.0",
     "react": "^18",
     "react-dom": "^18",
@@ -25,6 +26,7 @@
     "universal-cookie": "^7.1.0"
   },
   "devDependencies": {
+    "@types/jsonwebtoken": "^9.0.6",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
