--- a/package.json
+++ b/package.json
@@ -15,9 +15,8 @@
     "@emotion/react": "^11.11.3",
     "@emotion/styled": "^11.11.0",
     "@types/react-syntax-highlighter": "^15.5.11",
-    "axios": "^1.6.8",
     "framer-motion": "^11.0.5",
-    "jsonwebtoken": "^9.0.2",
+    "mongoose": "^8.7.3",
     "next": "14.1.0",
     "react": "^18",
     "react-dom": "^18",
