--- a/package.json
+++ b/package.json
@@ -14,10 +14,11 @@
     "@chakra-ui/react": "^2.8.2",
     "@emotion/react": "^11.11.3",
     "@emotion/styled": "^11.11.0",
+    "@prisma/client": "^5.22.0",
     "@types/react-syntax-highlighter": "^15.5.11",
     "framer-motion": "^11.0.5",
-    "mongoose": "^8.7.3",
     "next": "14.1.0",
+    "prisma": "^5.22.0",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.0.1",
