--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "author": "SayShark",
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
+    "build": "npx prisma generate && next build",
     "start": "next start",
     "lint": "next lint"
   },
