--- a/package.json
+++ b/package.json
@@ -15,10 +15,12 @@
     "@emotion/react": "^11.11.3",
     "@emotion/styled": "^11.11.0",
     "@prisma/client": "^5.22.0",
+    "@types/bcrypt": "^5.0.2",
     "@types/react-syntax-highlighter": "^15.5.11",
+    "bcrypt": "^5.1.1",
     "framer-motion": "^11.0.5",
     "next": "14.1.0",
-    "prisma": "^5.22.0",
+    "next-auth": "^4.24.10",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.0.1",
